# Svea-Examples

./: .gitignore  Makefile  README.md  run_all.sh  setup.sh
C#/: basic_auth.cs  checkout_create_order.cs
C++/: checkout_get_order.cpp  get_order  get_order.cpp  main  pa_get_order  pa_get_order.cpp
Checkout/C#/: create_order.cs  created_order_id.txt
Checkout/C++/: SveaAuth.h  create_order  create_order.cpp  created_order_id.txt  get_order.cpp  get_order_alt  get_order_alt.cpp  pa_get_order.cpp
Checkout/F#/: created_order_id.txt  get_order.fs  get_order.fsx
Checkout/Go/: create_order.go  create_order_payload.json  created_order_id.txt  get_order.go
Checkout/Java/: create_order.java  created_order_id.txt  get_order.java
Checkout/Javascript/: create_order.js  created_order_id.txt  get_order.js  nodejs_checkout_request.js  pa_auth.js  package-lock.json  package.json
Checkout/Php/: create_order.php  created_order_id.txt  get_order.php
Checkout/Python/: create_order.py  created_order_id.txt  get_order.py  pa_get_order.py
Checkout/Rust/: created_order_id.txt
Checkout/Rust/create_order/: Cargo.toml
Checkout/Rust/create_order/src/: main.rs
Checkout/Rust/get_order/: Cargo.toml
Checkout/Rust/get_order/src/: main.rs  main_alt.rs  main_v1.rs
Go/: checkout_get_order.go  get_order.go  pa_get_order.go
Java/Svea/: test.xml  (+1 more)
Javascript/: checkout_auth.js
PaymentGateway/Rust/PGRequestTester/: Cargo.toml
PaymentGateway/Rust/PGRequestTester/src/: main.rs
Php/: checkout_get_order.php  get_order.php
Python/: checkout_get_order.py  pa_get_order.py
(+95 files in other folders)
