[package]
name = "create_order"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
chrono = "0.4"
sha2 = "0.9"
base64 = "0.13"
serde = "1.0"
serde_json = "1.0"
hex = "0.4"
